# AIArtArchival

./: .gitignore  README.md  config.yaml  pyproject.toml
aiartarchival/: archive.py  captions_and_keywords.json
